--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@ manifest.json
         {
             "src": "logo.jpg",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ]
 }
