--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-manifest.json
 {
     "short_name": "Online Vote",
     "name": "オンライン投票サービス",
@@ -6,9 +5,9 @@ manifest.json
     "start_url": "index.html",
     "icons": [
         {
-            "src": "logo.jpg",
+            "src": "/logo.jpg",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/jpg"
         }
     ]
 }
