--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,13 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "/logo.jpg",
+            "src": "logo192.jpg",
             "sizes": "192x192",
+            "type": "image/jpg"
+        },
+        {
+            "src": "/logo.jpg",
+            "sizes": "512x512",
             "type": "image/jpg"
         }
     ]
