--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "logo192.jpg",
+            "src": "logo192.JPG",
             "sizes": "192x192",
             "type": "image/jpg"
         },
@@ -14,5 +14,7 @@
             "sizes": "512x512",
             "type": "image/jpg"
         }
-    ]
+    ],
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff"
 }
