--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "logo192.JPG",
+            "src": "/images/logo192.JPG",
             "sizes": "192x192",
             "type": "image/jpg"
         },
         {
-            "src": "/logo.jpg",
+            "src": "/images/logo.jpg",
             "sizes": "512x512",
             "type": "image/jpg"
         }
