--- a/manifest.json
+++ b/manifest.json
@@ -5,14 +5,19 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "/images/logo192.JPG",
+            "src": "images/android-chrome-192x192.png",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         },
         {
-            "src": "/images/logo.jpg",
+            "src": "images/android-chrome-512x512.png",
             "sizes": "512x512",
-            "type": "image/jpg"
+            "type": "image/png"
+        },
+        {
+            "src": "images/android-chrome-vector.svg",
+            "sizes": "512x512",
+            "type": "image/svg+xml"
         }
     ],
     "theme_color": "#ffffff",
