--- a/hiragana/manifest.json
+++ b/hiragana/manifest.json
@@ -1,21 +1,21 @@
 {
-    "short_name": "オンライン投票",
-    "name": "オンライン投票サービス",
+    "short_name": "オンラインとうひょう",
+    "name": "オンラインとうひょうサービス",
     "display": "standalone",
-    "start_url": "index.html",
+    "start_url": "hiragana/top-hiragana.html",
     "icons": [
         {
-            "src": "images/android-chrome-192x192.png",
+            "src": "./../images/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "images/android-chrome-512x512.png",
+            "src": "./../images/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "images/android-chrome-vector.svg",
+            "src": "./../images/android-chrome-vector.svg",
             "sizes": "512x512",
             "type": "image/svg+xml"
         }
